# cpp-effective-programming

./: README.md
proj1/: CMakeLists.txt  CTable.cpp  CTable.h  main.cpp  table_utils.cpp  table_utils.h
proj2/: CMakeLists.txt  CNumber.cpp  CNumber.h  MyInt.cpp  MyInt.h  main.cpp
proj3/: CErrorMessage.cpp  CInterface.h  CMakeLists.txt  CNode.cpp  CTree.cpp  CTree.h  CVarList.h  constants.h  main.cpp
proj4/: CMakeLists.txt  CNode.h  CResult.hpp  CResultSaver.cpp  CResultSaver.h  CResultSaver.tpp  CTokenizer.h  CVarList.cpp  main.cpp
proj5/: CMakeLists.txt  CMySmartPointer.hpp  CMySmartPointer.tpp  CRefCounter.cpp  CRefCounter.h  CRegistry.cpp  CRegistry.h  main.cpp
proj5/CTree/: CError.cpp  CError.h  CErrorMessage.h  CInterface.cpp  CResult.hpp  CResult.tpp  CTokenizer.cpp  CTree.cpp  CTree.h  CTreeCreator.cpp  CTreeCreator.h  constants.h
